// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldRouterForm > initializes 1`] = `ShallowWrapper {}`;

exports[`FieldRouterForm > should render 1`] = `ShallowWrapper {}`;

exports[`FieldRouterForm > updates > should build expression from a selected field 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "inboundConnections": {},
        "node": {
          "actions": [],
          "exits": [
            {
              "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            },
            {
              "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            },
          ],
          "router": {
            "cases": [
              {
                "arguments": [
                  "red",
                ],
                "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
                "type": "has_any_word",
                "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
              },
            ],
            "categories": [
              {
                "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
                "name": "Red",
                "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
              },
              {
                "exit_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
                "name": "Other",
                "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
              },
            ],
            "default_category_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
            "operand": "@fields.my_field",
            "result_name": "Color",
            "type": "switch",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
        "ui": {
          "config": {
            "cases": {},
            "operand": {
              "id": "my_field",
              "name": "My Field",
              "type": "field",
            },
          },
          "position": null,
          "type": "split_by_contact_field",
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`FieldRouterForm > updates > should save changes 1`] = `
{
  "cases": [
    {
      "categoryName": "Red",
      "kase": {
        "arguments": [
          "red",
        ],
        "type": "has_any_word",
      },
      "valid": true,
    },
    {
      "categoryName": "Red",
      "kase": {
        "arguments": [
          "maroon",
        ],
        "type": "has_any_word",
      },
      "valid": true,
    },
    {
      "categoryName": "Green",
      "kase": {
        "arguments": [
          "green",
        ],
        "type": "has_any_word",
      },
      "valid": true,
    },
  ],
  "field": {
    "value": {
      "id": "name",
      "key": "name",
      "name": "Name",
      "type": "property",
    },
  },
  "resultName": {
    "validationFailures": [],
    "value": "Favorite Color",
  },
  "valid": true,
}
`;

exports[`FieldRouterForm > updates > should save changes 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "inboundConnections": {},
        "node": {
          "actions": [],
          "exits": [
            {
              "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            },
            {
              "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
            },
            {
              "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            },
          ],
          "router": {
            "cases": [
              {
                "arguments": [
                  "red",
                ],
                "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
                "type": "has_any_word",
              },
              {
                "arguments": [
                  "maroon",
                ],
                "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
                "type": "has_any_word",
              },
              {
                "arguments": [
                  "green",
                ],
                "category_uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
                "type": "has_any_word",
              },
            ],
            "categories": [
              {
                "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
                "name": "Red",
                "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
              },
              {
                "exit_uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
                "name": "Green",
                "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
              },
              {
                "exit_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
                "name": "Other",
                "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
              },
            ],
            "default_category_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
            "operand": "@contact.name",
            "result_name": "Favorite Color",
            "type": "switch",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
        "ui": {
          "config": {
            "cases": {},
            "operand": {
              "id": "name",
              "name": "Name",
              "type": "property",
            },
          },
          "position": null,
          "type": "split_by_contact_field",
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
